<resources>
    <string name="app_name">finalProject</string>
    <string name="StudentLog">Student Login</string>
    <string name="AppName">Study Life</string>
    <string name="aaa">finalProject</string>
    <string name="EduEmail">Edu Email</string>
    <string name="pass">Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="login">Login</string>
    <string name="createAcc">Create Account</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_themes">Customize Theme</string>
    <string name="menu_feedback">Provide Feedback</string>
    <string name="feedbackTxt">We would appreciate your honest feedback about our app.Tell us what you think and let us know your concerns.</string>
    <string name="reminderTxt">Create and allow to instantly leave a notification reminder on your device. To remind you once you open your device.</string>
    <string name="quote">A little progress for each day adds up to big results. -Satyna Nani</string>
</resources>