<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/budget_icon"
            android:title="Budget" />
        <item
            android:id="@+id/nav_todolist"
            android:title="To-do List"/>
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/notes"
            android:title="Notes"/>
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/reminder"
            android:title="Reminders"/>
        <item
            android:id="@+id/nav_themes"
            android:icon="@drawable/themes_icon"
            android:title="@string/menu_themes" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule_icon"
            android:title="Schedule" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback_icon"
            android:title="@string/menu_feedback" />

    </group>
</menu>