<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.finalproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_themes"
        android:name="com.example.finalproject.ui.customizethemes.CustomizeThemeFragment"
        android:label="@string/menu_themes"
        tools:layout="@layout/fragment_customizetheme" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.finalproject.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_budget"
        android:name="com.example.finalproject.ui.budget.BudgetFragment"
        android:label="Budget Tracker"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.finalproject.ui.schedule.ScheduleFragment"
        android:label="Schedule"
        tools:layout="@layout/fragment_schedule"/>
    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.finalproject.ui.notes.NotesFragment"
        android:label="Notes"
        tools:layout="@layout/fragment_notes"/>

    <fragment
        android:id="@+id/nav_reminders"
        android:name="com.example.finalproject.ui.reminders.RemindersFragment"
        android:label="Reminders"
        tools:layout="@layout/fragment_reminders"/>

    <fragment
        android:id="@+id/nav_todolist"
        android:name="com.example.finalproject.ui.todolist.ToDoListFragment"
        android:label="To-do List"
        tools:layout="@layout/fragment_to_do_list"/>


</navigation>